--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,14 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: source-sans-pro;
+}
+
+nav {
+  font-family: bungee;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ 
