--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,43 +1,28 @@
-.nav {
-display: flex;
-height: 120px;
-justify-content: space-between;
-align-items: center;
-padding-right: 1.5em;
-padding-left: 1.5em;
-background-color: #4056A1;
-color: #FFFFFF;
-font-family: bungee;
-}
-
-.right-header{
-display: flex;
-flex-direction: column;
-align-items: center;
-font-family: source sans pro;
-font-weight: 600;
-
-}
-.a-new-tweet{
+nav {
 display: flex;
 flex-direction: row;
-font-family: source sans pro;
-font-weight: 300;
+justify-content: space-between;
+align-items: center;
+position: fixed;
+width: 100%;
+height: 120px;
+padding: 0 1.5em;
+background-color: #4056A1;
+color: #FFFFFF;
+
+}
+
+.nav-div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .fas {
   color: red;
+  transform: translateY(-20px);
 }
 
-.write{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 10px;
-}
 
-.header{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
