--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,7 +25,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
  
- .container{
+ #container{
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
@@ -34,4 +34,14 @@ body {
    width: 90%;
    margin-left: 5%;
    background-color: #f4f1ec;
+  }
+
+  .tweet-container{
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  article.tweet-container{
+    border-style: solid;
   }
