--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,7 @@
   border: 2px dotted ridge;
   justify-content: center;
   align-items: center;
-  background-color: #000201;
+  background-color:cornflowerblue;
   background-image: url("https://www.transparenttextures.com/patterns/inflicted.png");
   
 }
