--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,13 +3,14 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 align-items: center;
-position: fixed;
+position: sticky;
 width: 100%;
 height: 120px;
 padding: 0 1.5em;
 background-color: #4056A1;
 color: #FFFFFF;
 z-index: 1;
+top: 0px
 
 }
 
