--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ flex-direction: row;
 justify-content: space-between;
 align-items: center;
 position: sticky;
-width: 100%;
+width: 100vw;
 height: 120px;
 padding: 0 1.5em;
 background-color: #4056A1;
@@ -19,6 +19,7 @@ top: 0px
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 0.5em;
 }
 
 .fas {
