--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,9 +5,8 @@
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color:cornflowerblue;
-  background-image: url("https://www.transparenttextures.com/patterns/inflicted.png");
-  
+  background-color: #e887bb;
+  background-image: url("https://www.transparenttextures.com/patterns/back-pattern.png");
 }
 
 .header-img img{
