--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,96 +25,95 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- 
- #container{
-   display: flex;
-   flex-direction: column;
-   align-items: stretch;
-   justify-content: center;
-   width: 90vw;
-   margin-left: 5%;
-   background-color: #f4f1ec;
-  }
 
-  section#tweets-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 1.5em;
-  }
+.header-main-container{
+  display: flex;
+  flex-direction: column;
+}
+
+#container{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  width: 90vw;
+  margin-left: 5%;
+  background-color: #f4f1ec;
+}
+
+section#tweets-container{
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5em;
+}
+
+section#tweets-container article{
+  border-style: solid;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  font-family: 'Source Sans Pro';
+}
   
-  section#tweets-container article{
-    border-style: solid;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    font-family: 'Source Sans Pro';
-  }
+article.tweet:hover{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 5px 10px #888888
+}
   
-  article.tweet:hover{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 5px 10px #888888
-  }
-  
-  article.tweet footer{
-    border-top: solid;
-    border-color: black;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-    font-size: smaller;
-    margin-bottom: 0.5em;
-  }
+article.tweet footer{
+  border-top: solid;
+  border-color: black;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  font-size: smaller;
+  margin-bottom: 0.5em;
+}
 
-  article.tweet p{
-    padding-left: 1em;
-    padding-right: 1em;
-  }
-  header.tweet-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;    
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    padding-top: 0.5em;
-  }
-  .far{
+article.tweet p{
+  padding-left: 1em;
+  padding-right: 1em;
+}
 
-    padding-right: 0.5em;
+header.tweet-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;    
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-top: 0.5em;
+}
 
-  }
+.far{
 
-  .tweet-footer{
-    display: flex;
-    padding-top: 0.5em;
-    margin-bottom: 0px;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  padding-right: 0.5em;
 
- footer.tweet-footer small, div{
-   margin-left: 1em;
-   margin-right: 1em;
+}
 
- }
+.tweet-footer{
+  display: flex;
+  padding-top: 0.5em;
+  margin-bottom: 0px;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
- .icons{ 
+.icons{ 
   justify-content: space-between;
   padding-top: 20px;
   font-size: 0.73em;
 }
 
 .icons .fas{
-  color: cornflowerblue;
+  color: rgb(9, 59, 153);
 }
 
 .fa-flag:hover, .fa-retweet:hover, .fa-heart:hover{
-  color: rgb(9, 59, 153);
+  color: cornflowerblue;
 }
 
 .error-msg{
   color: #D8000C;
-  background-color: #FFBABA;
-  background-image: url('https://i.imgur.com/GnyDvKN.png');
   border: 1px solid;
   margin: 10px auto;
   padding: 15px 10px 15px 50px;
@@ -123,43 +122,17 @@ body {
   max-width: 460px;
 }
  
- 
-@media only screen and (min-width: 1024px) and (max-width: 1440px)  {
-  body{
-    display: flex;
-    flex-direction: column;
-  }
-  .header-main-container{
-    display: flex;
-    flex-direction: row;
-  }
-
-  #container{
-    height: 50vh;
-    position:relative;
-    
-  }
-
-  #container #tweets-container{
-    height: 23rem;
-  }
-
-  header.header{
-    margin-top: 7rem;
-  }
-  .header-img{
-    padding-top: 5rem
-  }
-}
-/* /* /*Tablet Styles */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   body{
     display: flex;
     flex-direction: column;
   }
+
   .header-main-container{
     display: flex;
     flex-direction: row;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 
   #container{
@@ -168,8 +141,8 @@ body {
     
   }
 
-  #container #tweets-container{
-    height: 23rem;
+  #tweets-container{
+    height: 15vh
   }
 
   header.header{
@@ -178,4 +151,35 @@ body {
   .header-img{
     padding-top: 5rem
   }
-}
+} 
+ 
+@media only screen and (min-width: 1024px) and (max-width: 1700px)  {
+  body{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header-main-container{
+    display: flex;
+    flex-direction: row;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  #container{
+    height: 50vh;
+    position:relative;
+    
+  }
+
+  #tweets-container{
+    height: 15vh;
+  }
+
+  header.header{
+    margin-top: 7rem;
+  }
+  .header-img{
+    padding-top: 5rem
+  }
+} 
