--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,17 +1,18 @@
 nav {
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-position: sticky;
-width: 100vw;
-height: 120px;
-padding: 0 1.5em;
-background-color: #4056A1;
-color: #FFFFFF;
-z-index: 1;
-top: 0px
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  width: 100vw;
+  height: 6vh;
+  padding-right: 1.5em;
+  padding-left: 1em;
+  background-color: #e887bb;
+  background-image: url("https://www.transparenttextures.com/patterns/back-pattern.png");
+  color: #FFFFFF;
+  z-index: 1;
+  top: 0px
 }
 
 .nav-div{
@@ -19,7 +20,8 @@ top: 0px
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 0.5em;
+  padding-top: 0.5rem;
+  font-size: initial;
 }
 
 .fas {
@@ -27,5 +29,22 @@ top: 0px
   transform: translateY(-20px);
 }
 
+.fa-solid, .fas{
+  font-weight: 900;
+  font-size: x-small;
+  padding-top: 0.5rem;
+}
 
 
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  nav{
+    background-color: #4056A1;
+    background-image: none;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-width: 1700px)  {
+  nav{
+    background-color: #4056A1;
+    background-image: none;
+  }
+}
