--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -36,7 +36,7 @@ nav {
 }
 
 
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+/* @media only screen and (min-width: 768px) and (max-width: 1023px) {
   nav{
     background-color: #4056A1;
     background-image: none;
@@ -47,4 +47,4 @@ nav {
     background-color: #4056A1;
     background-image: none;
   }
-}
+} */
